# ZapSearch

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  seeds.txt  seeds_top10k.txt
.github/workflows/: ci.yml
core/: Cargo.toml
core/benches/: tokenizer_bench.rs
core/src/: index.rs  lib.rs  persist.rs  tokenizer.rs
core/tests/: tokenizer_tests.rs
crawler/: Cargo.toml
crawler/src/: main.rs
indexer/: Cargo.toml
indexer/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/tests/: integration_search.rs
web/: README.md  package-lock.json  package.json  tsconfig.json
web/components/: ThemeToggle.tsx
web/pages/: _app.tsx  index.tsx  search.tsx
web/styles/: globals.css
