[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
parking_lot = "0.12"
regex = "1.10"
rust-stemmers = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tracing = "0.1"
unicode-normalization = "0.1"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tokenizer_bench"
harness = false
