[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "http2", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
time = { version = "0.3", features = ["formatting", "macros"] }
