[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sled = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
