[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
core = { path = "../core" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
tower = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
